removed "color" in checks

--- a/index.html
+++ b/index.html
@@ -35,7 +35,7 @@
 				var a="";
 				var e,d;
 				var c=["aim.autoaim","aimbot","chams","hax_aimbot","hax_autoshoot","hax_distesp","hax_killsounds","hax_killspam","hax_nameesp","hax_radar","hax_stats","hax_wallhack","Mom_aimbot","Mom_autoshoot","Mom_distesp","Mom_killspam","Mom_nameesp","Mom_radar","Mom_stats","Mom_wallhack","nameesp","norecoil","recoil","wallhack","wh","_aimbot","_autoshoot","_crosshair","_crosshairhealth","_infoenemy","_killsounds","_killspam","_nameesp","_radar","_simpletrace","_stats","_wallhack"];
-				var f=["aim","chams","color","esp","health","info","key","kill","radar","recoil","trace","tracker","vstr","wall","wait"];
+				var f=["aim","chams","esp","health","info","key","kill","radar","recoil","trace","tracker","vstr","wall","wait"];
 				config=document.getElementById("cfg").value.split(/\r\n|\r|\n/i);
 				for(e=0;e<config.length;e++)
 				{
