split css and js

--- a/index.html
+++ b/index.html
@@ -4,170 +4,7 @@
 	<head>
 		<meta charset="UTF-8">
 		<title>CoD4 Config Checker</title>
-
-		<style type="text/css">
-			@import url('https://fonts.googleapis.com/css?family=Roboto');
-			body{
-				background-color: #F2F2F2;
-				font-family: 'Roboto';
-			}
-			footer{
-				font-size: 12px;
-			}
-			.red{
-				background-color: #E84C3D;
-			}
-			.orange{
-				background-color: #E77E22;
-			}
-			.green{
-				background-color: #87BC58;
-			}
-			a{
-				color: #3D3D3D;
-			}
-			#wrap{
-				width: 1100px;
-				background-color: #D9D9D9;
-				overflow: hidden;
-				color: #000000;
-				margin: 0 auto;
-			}
-			#headline{
-				margin: 10px 20px 10px 20px;
-				padding: 0;
-				font-size: 24px;
-				font-weight: 700;
-				color: #000000;
-			}
-			textarea, ul{
-				width: 1050px;
-			}
-			textarea{
-				display: block;
-				height: 400px;
-				border: 0;
-				outline: none;
-				margin: 0px 0px 10px 20px;
-				padding: 0;
-				resize: none;
-			}
-			pre{
-				display: inline;
-				margin: 0;
-				padding: 0;
-			}
-			ul{
-				list-style-type: none;
-				margin: 10px 20px 10px 20px;
-				padding: 2px;
-			}
-			ul li{
-				padding-left: 3px;
-			}
-			#violations{
-				display: none;
-				color: #0A0A0A;
-			}
-			.btn{
-				background: transparent;
-				border: 2px solid transparent;
-				box-sizing: border-box;
-				cursor: pointer;
-				font-size: 18px;
-				font-weight: 700;
-				line-height: 1;
-				margin: 10px 20px 10px 20px;
-				padding: 15px 25px;
-				text-align: center;
-				text-decoration: none;
-				display: inline-block;
-				outline: none;
-				position: relative;
-				top: 0;
-				text-shadow: 0 1px 1px rgba(0, 0, 0, 0.5);
-				-webkit-transition: all 0.2s ease-in-out 0s;
-				-moz-transition: all 0.2s ease-in-out 0s;
-				-ms-transition: all 0.2s ease-in-out 0s;
-				 transition: all 0.2s ease-in-out 0s;
-				 width: 1051px;
-			}
-			.grey{
-				background: #4C4C4C;
-				color: #fff;
-				box-shadow: 0 3px 0 #333333;
-			}
-			.grey:hover{
-				background: #747373;    
-			}
-			.grey:active, .grey:focus{
-				background: #444444;    
-			}
-			.transparent{
-				background: none;
-				box-shadow: none;
-				text-shadow: none;
-				color: #000;    
-			}
-			.grey.transparent{
-				border-color: #4C4C4C;
-			}
-		</style>
-
-		<script type="text/javascript">
-			var config = [];
-
-			function checkCfg() {
-				if (document.getElementById("cfg").value.length === 0) {
-					document.getElementById("violations").innerHTML = "";
-					document.getElementById("violations").style.display = "none"
-				} else {
-					var a = "";
-					var e, d;
-					var c = ["aim.autoaim", "aimbot", "chams", "con_maxfps", "hax_aimbot", "hax_autoshoot", "hax_distesp", "hax_killsounds", "hax_killspam", "hax_nameesp", "hax_radar", "hax_stats", "hax_wallhack", "Mom_aimbot", "Mom_autoshoot", "Mom_distesp", "Mom_killspam", "Mom_nameesp", "Mom_radar", "Mom_stats", "Mom_wallhack", "nameesp", "norecoil", "recoil", "wallhack", "wh", "_aimbot", "_autoshoot", "_crosshair", "_crosshairhealth", "_infoenemy", "_killsounds", "_killspam", "_nameesp", "_radar", "_simpletrace", "_stats", "_wallhack"];
-					var f = ["aim", "chams", "esp", "health", "info", "key", "kill", "radar", "recoil", "trace", "tracker", "vstr", "wall", "wait"];
-					config = document.getElementById("cfg").value.split(/\r\n|\r|\n/i);
-					for (e = 0; e < config.length; e++) {
-						var b = config[e].match(/^bind .*? (.*)$/i);
-						if (b !== null && b.length > 0) {
-							for (d = 0; d < f.length; d++) {
-								if (b[b.length - 1].toLowerCase().indexOf(f[d].toLowerCase()) !== -1) {
-									a += '<li class="orange">Line ' + (e + 1) + ": Disallowed BIND contents <em>" + f[d] + "</em> in <pre>" + config[e] + '</pre> (<a href="#" onclick="removeLine(' + (e + 1) + ');return false;">Remove this line</a>)</li>';
-									break
-								}
-							}
-						} else {
-							b = config[e].match(/^seta (.*?) (.*)$/i);
-							if (b !== null && b.length > 0) {
-								for (d = 0; d < c.length; d++) {
-									if (b[b.length - 2].toLowerCase() === c[d].toLowerCase()) {
-										a += '<li class="red">Line ' + (e + 1) + ": Disallowed DVAR name <em>" + c[d] + '</em> (<a href="#" onclick="removeLine(' + (e + 1) + ');return false;">Remove this line</a>)</li>';
-										break
-									}
-								}
-								for (d = 0; d < f.length; d++) {
-									if (b[b.length - 1].toLowerCase().indexOf(f[d].toLowerCase()) !== -1) {
-										a += '<li class="orange">Line ' + (e + 1) + ": Disallowed DVAR contents <em>" + f[d] + "</em> in <pre>" + config[e] + '</pre> (<a href="#" onclick="removeLine(' + (e + 1) + ');return false;">Remove this line</a>)</li>';
-										break
-									}
-								}
-							}
-						}
-					}
-					if (a === "") {
-						a = '<li class="green">Your config is clean. Congratulations!</li>'
-					}
-					document.getElementById("violations").innerHTML = a;
-					document.getElementById("violations").style.display = "block"
-				}
-			}
-
-			function removeLine(a) {
-				config.splice(parseInt(a) - 1, 1);
-				document.getElementById("cfg").value = config.join("\n");
-				checkCfg()
-			};
-		</script>
+		<link href="css/style.css" rel="stylesheet">
 	</head>
 
 	<body>
@@ -192,4 +29,5 @@
 		<p>&#169 2013-2021, jNizM (https://github.com/jNizM)</p>
 	</footer>
 
+	<script src="js/checkcfg.js"></script>
 </html>
