--- a/index.html
+++ b/index.html
@@ -21,12 +21,13 @@
 		<ul id="violations">
 			<li></li>
 		</ul>
-		<small></small>
 	</div>
 
 	<div class="spacer"></div>
 	<footer class="footer">
+		<p>&#169 2013-2013, A dude on Tek-9.org</p>
 		<p>&#169 2013-2021, jNizM (https://github.com/jNizM)</p>
+		<p>&#169 2021-2021, TiPSY (https://github.com/tipsy-cod)</p>
 	</footer>
 </body>
 
